@@ -3,6 +3,7 @@
 
 \section{Changes in version 1.3.0}{
   \itemize{
+    \item{NEW}{ fisher_score method now accepts NChannelSets as 'sets' and thresholds a channel of choice on the fly.}
     \item{BUGFIX}{ induceCMAPCollection method was updated to fix a bug that prevented processing of certain single-sample eSets.}
     \item{NEW}{ New parameters 'center.z' and 'center.log_fc' for the generate_gCMAP_NChannelSet function, centering each column of the score matrix on the column mean, median or density peak. (Internally, the new 'center_eSet' function is called.)}
     \item{NEW}{ New function 'center_eSet' to center columns of eSet channels on either their kernel density peak, their mean or their median.}
